apps/overlays/dev/ingress/apigateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-apigateway
  namespace: ecom-dev
  annotations:
    argocd.argoproj.io/sync-wave: "7"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: api.dev.ecommerceddd.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerceddd-apigateway-api
                port:
                  number: 80
