apps/overlays/dev/ingress/identityserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-identityserver
  namespace: ecom-dev
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - id.dev.ecommerceddd.local
      secretName: ecom-dev-tls-wildcard
  rules:
    - host: id.dev.ecommerceddd.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerceddd-identityserver-api
                port:
                  number: 80
