apps/overlays/dev/ingress/spa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-spa
  namespace: ecom-dev
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.dev.ecommerceddd.local
      secretName: ecom-dev-tls-wildcard
  rules:
    - host: app.dev.ecommerceddd.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerceddd-spa-spa
                port:
                  number: 80
